<resources>

    <string name="app_name_old">Hazard-SP</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="title_activity_join_game">Multiplayer</string>
    <string name="title_activity_user_info">Credits</string>
    <string name="title_activity_game_settings">GameSettingsActivity</string>
    <string name="title_activity_game_room">GameRoomActivity</string>
    <string name="title_activity_current_game">CurrentGameActivity</string>
    <string name="button_login">Login</string>
    <string name="login">Login</string>
    <string name="button_createAcc">Create Account</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username: </string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password: </string>
    <string name="enter_password">Enter password (No spaces)</string>
    <string name="create_email">Email: </string>
    <string name="enter_email">Enter email</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="button_single_player">Single Player</string>
    <string name="button_multiplayer">Mulitplayer</string>
    <string name="refresh">Refresh</string>
    <string name="button_help">Help</string>
    <string name="userinfo">User Info.</string>
    <string name="score">Scores: </string>
    <string name="win">Win = </string>
    <string name="loss">Loss = </string>
    <string name="button_back">Back</string>
    <string name="button_Credits">Credits</string>
    <string name="button_settings">Settings</string>
    <string name="create_game">Create Game</string>
    <string name="gamename">Game name: </string>
    <string name="enter_gamename">Enter game name</string>
    <string name="button_game_settings">Game Settings</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="menu_settings">Settings</string>
    <string name="game_settings">Game Settings</string>
    <string name="game_room">Game Room</string>
    <string name="start_game">Start</string>
    <string name="okay">OK</string>
    <string name="timeout_settings">Timeout Settings</string>
    <string name="timeout_time">Timeout Time (hh:mm:ss): </string>
    <string name="pick_time">Pick Time</string>
    <string name="no_of_ai">Number of AIs: </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_reconnect">ReconnectActivity</string>
    <string name="title_activity_reconnect_login">ReconnectLoginActivity</string>
    <string name="single_player_activity">Single Player</string><string name="single_player">Single Player</string>

</resources>